# agentic-dev-pipeline

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SPEC.md  architecture.md  github_setup_guide.md  pyproject.toml  to-do-list.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: nightly.yml
pipeline/: config.py  logger.py
pipeline/agents/: __init__.py  base.py  coder.py  notifier.py  planner.py  reviewer.py  tester.py
pipeline/graph/: nodes.py  pipeline_graph.py  state.py
pipeline/tools/: asana_tools.py  git_tools.py  slack_tools.py  test_tools.py
tests/: test_agent_parsing.py  test_helpers.py  test_nodes.py  test_state.py
